@@ -8,19 +8,20 @@ Levels completed:
 
 Level 0
 Level 1
+Level 3
 
 Working on:
 
 Emily: 		Level 7/ Level 8
 
-John: 		Level 3
+John: 		Level 4
 
 Justin: 	Level 2
 
-Max: 		Stylesheet
+Max: 		Stylesheet/Level 5
 
 Tyler: 		Testing/Debugging
 
 Remaining:
 
-levels 4, 5, 6, 8, 9, 10, 11, 12 ...
+levels   6, 8, 9, 10, 11, 12 ...
