@@ -7,3 +7,5 @@ Changelog:
 12/9 -2: Emily has BasicObjects and ElucidGameJS ready for making levels. Ends the code freeze. Make sure TODO's are completed in both files when you make the copy
 
 12/12: Levels assigned. Emily finished level 1 and moved onto level 7. John created code for level 3. Justin assigned level 2. Max almost done with stylesheet
+
+12/14: Level 3 is finished, John will work on Level 4
